--- a/index.html
+++ b/index.html
@@ -12,19 +12,48 @@
 </head>
 
 <body>
-    <section class="container-fluid">
-        <main class="row">
+    <!--CONTAINER-->
+    <section class="container-fluid d-flex">
+        <main class="row row-custom">
             <aside class="col-12 col-md-4 color-container text-light">
                 <h1 class="fs-2 my-5">CRM-JSONSERVER</h1>
                 <h2 class="fs-5">Administrar tus Clientes con el CRM - JSONServer</h2>
                 <div class="pt-5 ms-3">
-                    <p class="fs-5">Clientes</p>
-                    <p class="fs-5">Nuevo Cliente</p>
+                    <p class="fs-5" id="clients">Clientes</p>
+                    <p class="fs-5" id="newClientBtn">Nuevo Cliente</p>
                 </div>
             </aside>
             <div class="col-12 col-md-8 color-custom">
-                <h2 class="text-center my-4 fw-lighter">Clientes</h2>
-                <div class="p-5" id="container-users">
+                <div id="container-clientes">
+                    <h2 class="text-center my-4 fw-lighter">Clientes</h2>
+                    <div class="p-5" id="container-users">
+                    </div>
+                </div>
+                <div class="p-5 d-none" id="nuevoClienteContainer">
+                    <h2 class="text-center my-4 fw-lighter">Agregar nuevo cliente</h2>
+                    <form class="bg-light p-3 rounded-3">
+                        <div class="mb-3">
+                            <label for="newClientName" class="form-label">Nombres</label>
+                            <input type="text" class="form-control" id="newClientName" autocomplete="off"
+                                placeholder="Nombre Cliente">
+                        </div>
+                        <div class="mb-3">
+                            <label for="newClientEmail" class="form-label">Correo</label>
+                            <input type="email" class="form-control" id="newClientEmail" autocomplete="off"
+                                placeholder="Email Cliente">
+                        </div>
+                        <div class="mb-3">
+                            <label for="newClientPhone" class="form-label">Telefono</label>
+                            <input type="number" class="form-control" id="newClientPhone" autocomplete="off"
+                                placeholder="Teléfono Cliente">
+                        </div>
+                        <div class="mb-3">
+                            <label for="newClientEmpresa" class="form-label">Empresa</label>
+                            <input type="text" class="form-control" id="newClientEmpresa" autocomplete="off"
+                                placeholder="Empresa Cliente">
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100" id="addNewClient">AGREGAR CLIENTE</button>
+                    </form>
                 </div>
             </div>
         </main>
@@ -47,7 +76,6 @@
                                 <input type="text" class="form-control" id="nombreCliente"
                                     aria-describedby="Nombre del Cliente" autocomplete="off">
                             </div>
-
                         </div>
                         <div class="col-6">
                             <div class="mb-3">
@@ -55,55 +83,49 @@
                                 <input type="text" class="form-control" id="emailCliente"
                                     aria-describedby="Cliente Email" autocomplete="off">
                             </div>
-
                         </div>
                         <div class="col-6">
                             <div class="mb-3">
                                 <label for="telefonoCliente" class="form-label">Telefono del cliente</label>
                                 <input type="number" class="form-control" id="telefonoCliente"
                                     aria-describedby="Telefono del Cliente" autocomplete="off">
-
                             </div>
-
                         </div>
                         <div class="col-6">
                             <div class="mb-3">
                                 <label for="empresaCliente" class="form-label">Empresa del cliente</label>
                                 <input type="text" class="form-control" id="empresaCliente"
                                     aria-describedby="Empresa del Cliente" autocomplete="off">
-
                             </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary" id="saveEdit">Save changes</button>
                 </div>
             </div>
         </div>
     </div>
 
-
     <!--Modal Delete-->
     <div class="modal" tabindex="-1" id="modalDelete">
         <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Eliminar cliente</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Esta seguro de eliminar el cliente?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger">Eliminar</button>
+                </div>
             </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal1">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
