--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!--CONTAINER-->
     <section class="container-fluid d-flex">
         <main class="row row-custom">
-            <aside class="col-12 col-md-4 color-container text-light">
+            <aside class="col-12 col-md-3 color-container text-light">
                 <h1 class="fs-2 my-5">CRM-JSONSERVER</h1>
                 <h2 class="fs-5">Administrar tus Clientes con el CRM - JSONServer</h2>
-                <div class="pt-5 ms-3">
-                    <p class="fs-5" id="clients">Clientes</p>
-                    <p class="fs-5" id="newClientBtn">Nuevo Cliente</p>
+                <div class="pt-5">
+                    <p class="fs-5 ps-3 clients" id="clients">-Clientes</p>
+                    <p class="fs-5 ps-3 newClient" id="newClientBtn">-Nuevo Cliente</p>
                 </div>
             </aside>
-            <div class="col-12 col-md-8 color-custom">
+            <div class="col-12 col-md-9 color-custom">
                 <div id="container-clientes">
                     <h2 class="text-center my-4 fw-lighter">Clientes</h2>
                     <div class="p-5" id="container-users">
@@ -65,7 +65,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Editar Cliente</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
